# portent

./: .editorconfig  .gitignore  .secrets.baseline  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: .editorconfig  bugfix.md  chore.md  feature.md
.github/workflows/: ci.yml
